# AsgardBench

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  AGENTS.md  Dockerfile  LICENSE  README.md  RESPONSIBLE_AI_FAQ.md  pyproject.toml  pyrightconfig.json  run.ps1
.github/workflows/: codeql.yml
AsgardBench/: candidate_pool.py  constants.py  defective_containers.py  goal.py  jump_candidates.py  memory.py  objects.py  plan.py  plan_generator.py  plan_viewer.py  player.py  prompt_data.py  randomization.py  scenario.py  scenes.py  setup.py  specifier.py  step.py  step_log.py  storage_utils.py  utils.py
AsgardBench/Data/: defective_containers.json  handshifts.json  item_cache.json  placement_cache.json
AsgardBench/Data/prompts/: available_actions.prompt  example1.prompt  example2.prompt  example3.prompt  main_prompt.prompt  task_instructions.prompt  world_rules.prompt
AsgardBench/Model/: create_display.sh  force_ai2thor_initialization.py  generate_reports.py  model_tester.py  openai_actor.py  openrouter_actor.py  prompt_dsl.py  prompt_templates.py  test_prompt_dsl.py  test_results.py
AsgardBench/Utils/: compare_images.py  config_utils.py  count_plans.py  display_plan_tree.py  json_utils.py  manual_control.py  plan_monitor.py
AsgardBench/cache/: item_cache.py  placement_cache.py  put_cache.py
scripts/: extract_model_errors.py  failure_summary.py  remove_api_failures.py
