[project]
name = "asgardbench"
version = "0.1.0"
description = "AsgardBench: Evaluating Visually Grounded Interactive Planning Under Minimal Feedback"
requires-python = ">=3.10"
dependencies = [
    "ai2thor",
    "readchar",
    "streamlit>=1.20.0",
    "streamlit-file-browser",
    "pillow",
    "numpy",
    "matplotlib",
    "st-file-browser",
    "openai",
    "python-dotenv>=1.2.1",
    "bokeh>=3.8.1",
    "typer>=0.20.0",
    "openpyxl>=3.1.5",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "isort>=5.13.0",
    "pre-commit>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["AsgardBench"]

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | __pycache__
    | \.eggs
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true
skip = [".git", ".venv", "__pycache__", "build", "dist"]

[tool.pyright]
reportImplicitOptional = false
pythonVersion = "3.10"
strictParameterNoneValue = false

[dependency-groups]
dev = [
    "black>=25.11.0",
    "isort>=7.0.0",
    "pre-commit>=4.5.0",
]
